Closed Bug 1434202 Opened 8 years ago Closed 8 years ago

[Wayland] popups does not have transparent background

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Popups (hamburger menu for instance) does not have transparent background, the shadows around them are rendered on solid background.
Comment on attachment 8946585 [details] Bug 1434202 - [Wayland] Set popups as app paintable on Wayland as we paint them ourself there, https://reviewboard.mozilla.org/r/216612/#review222316
Attachment #8946585 - Flags: review?(jhorak) → review+
Comment on attachment 8946585 [details] Bug 1434202 - [Wayland] Set popups as app paintable on Wayland as we paint them ourself there, https://reviewboard.mozilla.org/r/216612/#review222318 ::: widget/gtk/nsWindow.cpp:3793 (Diff revision 1) > gint wmd = ConvertBorderStyles(mBorderStyle); > if (wmd != -1) > gdk_window_set_decorations(mGdkWindow, (GdkWMDecoration) wmd); > } > > + if (!mIsX11Display) { Please doublecheck if tooltips also need this and file another bug if required.
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/4c2350c7909c [Wayland] Set popups as app paintable on Wayland as we paint them ourself there, r=jhorak
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: