Bug 1434202 - [Wayland] Set popups as app paintable on Wayland as we paint them ourself there, r=jhorak

MozReview-Commit-ID: 9kpovSmmZss